apps/client/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: client
  template:
    metadata:
      labels:
        name: client
    spec:
      containers:
        - name: client
          image: task-manager/client:v0.1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
