apps/client/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    name: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
